--- a/glass-website/index.html
+++ b/glass-website/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
     <title>Glass Website</title>
   </head>
   <body>
@@ -17,37 +17,37 @@
       <section class="glass">
         <div class="dashboard">
           <div class="user">
-            <img src="./images/avatar.png" alt="" />
+            <img src="./images/avatar.png" alt="Avatar" />
             <h3>Arsalaan Ali</h3>
             <p>Pro Member</p>
           </div>
           <div class="links">
             <div class="link">
-              <img src="./images/twitch.png" alt="" />
+              <img src="./images/twitch.png" alt="Streams" />
               <h2>Streams</h2>
             </div>
             <div class="link">
-              <img src="./images/steam.png" alt="" />
+              <img src="./images/steam.png" alt="Games" />
               <h2>Games</h2>
             </div>
             <div class="link">
-              <img src="./images/upcoming.png" alt="" />
+              <img src="./images/upcoming.png" alt="New" />
               <h2>New</h2>
             </div>
             <div class="link">
-              <img src="./images/library.png" alt="" />
+              <img src="./images/library.png" alt="Library" />
               <h2>Library</h2>
             </div>
-          </div>
-          <div class="pro">
-            <h2>Join pro for free games.</h2>
-            <img src="./images/controller.png" alt="" />
+            <div class="pro">
+              <h2>Join pro for free games.</h2>
+              <img src="./images/controller.png" alt="" />
+            </div>
           </div>
         </div>
         <div class="games">
           <div class="status">
             <h1>Active Games</h1>
-            <input type="text" />
+            <input type="text" />`
           </div>
           <div class="cards">
             <div class="card">
@@ -83,5 +83,8 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
+    <div class="circle3"></div>
+    <div class="circle4"></div>
+    <div class="circle5"></div>
   </body>
 </html>
